# convert-3ds-to-cia

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cia.rs  constants.rs  crypto.rs  decrypt.rs  main.rs  ncchinfo.rs  ncsd.rs  rom.rs  xorpad.rs
