[package]
name = "conv3ds-to-cia"
version = "0.1.0"
edition = "2021"
description = "Convert Nintendo 3DS ROMs (.3ds) to CIA files"

[[bin]]
name = "3ds-to-cia"
path = "src/main.rs"

[dependencies]
aes = "0.8"
byteorder = "1"
cbc = "0.1"
clap = { version = "4", features = ["derive"] }
colored = "2"
crc32fast = "1"
glob = "0.3"
rayon = "1"
sha2 = "0.10"
tempfile = "3"
zip = "2"

[profile.release]
opt-level = 3
lto = true
